--- a/app/src/main/res/layout/footer.xml
+++ b/app/src/main/res/layout/footer.xml
@@ -10,21 +10,27 @@
         android:layout_height="60dp"
         android:orientation="horizontal">
 
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/ic_notifications_none_black_24dp"
+            android:layout_marginTop="5dp"
+            />
         <TextView
             android:id="@+id/edtGo"
             android:layout_width="fill_parent"
             android:layout_height="60dp"
             android:text="@string/give_us_your_rate"
-            android:paddingTop="15dp"
-            android:paddingLeft="70dp"
-            android:textSize="25dp"
+            android:textSize="16dp"
             android:editable="false"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@color/colorBlack"
+            android:layout_marginLeft="50dp"
+            android:gravity="center_vertical"
             />
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btnSearch"
-            android:layout_width="60dp"
-            android:layout_height="50dp"
+            android:layout_width="100dp"
+            android:layout_height="40dp"
             android:text="@string/go"
             android:textSize="15dp"
             android:textStyle="bold"
@@ -39,7 +45,7 @@
     <ImageView
         android:layout_width="fill_parent"
         android:layout_height="150dp"
-        android:src="@drawable/footer_image"
+        android:src="@drawable/anhbia"
         android:scaleType="centerCrop"/>
 
 </LinearLayout>
