--- a/app/src/main/res/layout/activity_goi_ycho_ban.xml
+++ b/app/src/main/res/layout/activity_goi_ycho_ban.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:layout_marginTop="15dp"
     tools:context=".GoiYChoBan">
 
     <LinearLayout
@@ -12,8 +13,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:background="@color/colorWhite"
-        android:paddingLeft="10dp"
-        android:paddingTop="15dp">
+        android:paddingLeft="10dp">
         <ImageView
             android:layout_width="170dp"
             android:layout_height="120dp"
