--- a/app/src/main/res/layout/activity_goi_ycho_ban.xml
+++ b/app/src/main/res/layout/activity_goi_ycho_ban.xml
@@ -17,7 +17,10 @@
         <ImageView
             android:layout_width="170dp"
             android:layout_height="120dp"
-            android:src="@drawable/girl02"/>
+            android:src="@drawable/girl02"
+            android:clickable="true"
+            android:onClick="clickToDatBanImg"
+            android:id="@+id/imgGoiYChoBan"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -57,9 +60,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text=" Uư đãi các ngày trong tuần"
-                    android:textStyle="bold"
                     android:textSize="15dp"
-                    android:textColor="@color/colorBlack"/>
+                    android:textColor="@color/colorRed"
+                    />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
@@ -119,9 +122,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text=" Uư đãi các ngày trong tuần"
-                    android:textStyle="bold"
                     android:textSize="15dp"
-                    android:textColor="@color/colorBlack"/>
+                    android:textColor="@color/colorRed"/>
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
@@ -181,9 +183,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text=" Uư đãi các ngày trong tuần"
-                    android:textStyle="bold"
                     android:textSize="15dp"
-                    android:textColor="@color/colorBlack"/>
+                    android:textColor="@color/colorRed"/>
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
@@ -243,9 +244,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text=" Uư đãi các ngày trong tuần"
-                    android:textStyle="bold"
                     android:textSize="15dp"
-                    android:textColor="@color/colorBlack"/>
+                    android:textColor="@color/colorRed"/>
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
@@ -305,9 +305,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text=" Uư đãi các ngày trong tuần"
-                    android:textStyle="bold"
                     android:textSize="15dp"
-                    android:textColor="@color/colorBlack"/>
+                    android:textColor="@color/colorRed"/>
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
