--- a/app/src/main/res/layout/footer.xml
+++ b/app/src/main/res/layout/footer.xml
@@ -26,6 +26,7 @@
             android:textColor="@color/colorBlack"
             android:layout_marginLeft="50dp"
             android:gravity="center_vertical"
+
             />
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btnSearch"
@@ -39,6 +40,7 @@
             android:layout_alignRight="@+id/edtGo"
             style="@style/Widget.MaterialComponents.Button.OutlinedButton"
             app:strokeColor="@color/colorPrimary"
+            android:layout_marginRight="10dp"
 
             />
     </RelativeLayout>
